# vaishnavam-panchangam

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NOTES.txt  README.md  UpdateTzdata.cmake  calc.cpp  calc.h  coord.h  date.cpp  date.h  juldays_ut.cpp  juldays_ut.h  location.cpp  location.h  main.cpp  paran.cpp  paran.h  qwe.cpp  swe.cpp  swe.h  swe_time.cpp  swe_time.h  sweph_time.cpp  sweph_time.h  tithi.cpp  tithi.h  vrata.cpp  vrata.h  vrata_detail.cpp  vrata_detail.h
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: common.cmake
gui-qt/: CMakeLists.txt  edit-custom-dates.cpp  edit-custom-dates.h  edit-custom-dates.test.cpp  gui-qt_en_US.ts  htmlbrowser.cpp  htmlbrowser.h  latitude-edit.cpp  latitude-edit.h  latlongedit.cpp  latlongedit.h  latlongedit.test.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.test.cpp  mainwindow.ui
public_html/: index.html
scripts/: guess-timezones.js  test-3-builds.cmd
src/: calc-error.cpp  calc-error.h  calc-flags.cpp  calc-flags.h  calc.cpp  calc.h  calc.test.cpp  concat.h  date-fixed.h  disable-warning.h  filesystem-fixed.h  fmt-format-fixed.h  html-table-writer.cpp  html-table-writer.h  html-table-writer.test.cpp  html-util-test.cpp  html-util.cpp  html-util.h  jayanti-test.cpp  jayanti.cpp  jayanti.h  juldays_ut.cpp  juldays_ut.h  juldays_ut.test.cpp  location.cpp  location.h  location.test.cpp  main.cpp  masa.cpp  masa.h  nakshatra.cpp  nakshatra.h  nakshatra.test.cpp  named-dates.cpp  named-dates.h  nameworthy-dates.cpp  nameworthy-dates.h  paran.cpp  paran.h  paran.test.cpp  (+29 more)
tests/: catch-formatters.h  html-parser.cpp  html-parser.h  html-parser.test.cpp  html-table-parser.cpp  html-table-parser.h  sweph_time_test.cpp  test-calc.cpp  test-coord.cpp  test-date.cpp  test-existing-panchangas.cpp  test-html-parser.cpp  test-html-table-parser.cpp  test-juldays_ut.cpp  test-location.cpp  test-main.cpp  test-paran.cpp  test-precalculated.cpp  test-swe.cpp  test-swe_time.cpp  test-text-interface.cpp  test-tithi.cpp  test-tz.cpp  test-vrata-detail-printer.cpp  test-vrata-detail.cpp  test-vrata.cpp
tests/data/: precalculated-2017-11-12.html  precalculated-2017-11-27.html  precalculated-2017-12-11.html  precalculated-2017-12-26.html  precalculated-2018-01-10.html  precalculated-2018-01-23.html  precalculated-2018-02-08.html  precalculated-2018-02-24.html  precalculated-2018-03-10.html  precalculated-2018-03-17.html  precalculated-2018-03-23.html  precalculated-2018-04-09.html  precalculated-2018-04-24.html  precalculated-2018-05-09.html  precalculated-2018-05-14_adhimaasa.html  precalculated-2018-05-23.html  precalculated-2018-06-07.html  precalculated-2018-06-21.html  precalculated-2018-07-06.html  precalculated-2018-07-20.html  precalculated-2018-08-05.html  precalculated-2018-08-19.html  precalculated-2018-08-31.html  precalculated-2018-09-12.html  precalculated-2018-09-22.html  precalculated-2018-10-03.html  precalculated-2018-10-18.html  precalculated-2018-11-01.html  precalculated-2018-11-17.html  precalculated-2018-12-01.html  precalculated-2018-12-12.html  precalculated-2018-12-29.html  precalculated-2019-01-09.html  precalculated-2019-01-13.html  precalculated-2019-01-29.html  precalculated-2019-02-12.html  precalculated-2019-02-28.html  precalculated-2019-03-15.html  precalculated-2019-03-29.html  precalculated-2019-04-11.html  (+25 more)
